--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -1,15 +1,5 @@
 # .github/workflows/docker-ci.yml
 # Docker CI workflow: build, tag, and (optionally) push CPU and GPU images.
-#
-# - Builds both docker/Dockerfile.cpu and docker/Dockerfile.gpu
-# - Uses GitHub Container Registry (ghcr.io) by default; set REGISTRY env to override
-# - Pushing requires a registry login; this workflow logs in with GITHUB_TOKEN (GHCR) or a PAT if provided
-# - After build, the CPU job runs a short smoke command inside the built image to verify basic entrypoint behavior
-#
-# Secrets:
-# - For ghcr.io push you can rely on GITHUB_TOKEN permissions for the current repo.
-# - If using a different registry, set `DOCKER_USERNAME` and `DOCKER_PASSWORD` secrets and set env.REGISTRY accordingly.
-
 name: Docker CI
 
 on:
@@ -18,8 +8,8 @@ on:
   workflow_dispatch:
 
 env:
-  # override this variable in GH Actions environment or repository variables if you use another registry
-  REGISTRY: ghcr.io/${{ github.repository_owner }}
+  # Ensure registry owner is lowercased to satisfy Docker tag requirements.
+  REGISTRY: ghcr.io/${{ toLower(github.repository_owner) }}
   IMAGE_NAME: factors
 
 permissions:
@@ -36,6 +26,14 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      - name: Set up QEMU (optional multi-arch)
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          buildkitd-flags: --debug
+
       - name: Log in to registry
         uses: docker/login-action@v3
         with:
@@ -43,8 +41,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up QEMU (optional multi-arch)
-        uses: docker/setup-qemu-action@v3
+      - name: Debug: print image tags to be used
+        run: |
+          echo "REGISTRY=${REGISTRY}"
+          echo "IMAGE_NAME=${IMAGE_NAME}"
+          echo "CPU_TAG=${REGISTRY}/${IMAGE_NAME}:cpu-${GITHUB_SHA}"
+          echo "CPU_LATEST=${REGISTRY}/${IMAGE_NAME}:cpu-latest"
 
       - name: Build and push CPU image
         uses: docker/build-push-action@v5
@@ -82,12 +84,27 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      - name: Set up QEMU (optional multi-arch)
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          buildkitd-flags: --debug
+
       - name: Log in to registry
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Debug: print GPU image tags to be used
+        run: |
+          echo "REGISTRY=${REGISTRY}"
+          echo "IMAGE_NAME=${IMAGE_NAME}"
+          echo "GPU_TAG=${REGISTRY}/${IMAGE_NAME}:gpu-${GITHUB_SHA}"
+          echo "GPU_LATEST=${REGISTRY}/${IMAGE_NAME}:gpu-latest"
 
       - name: Build and push GPU image
         uses: docker/build-push-action@v5
@@ -108,4 +125,3 @@ jobs:
           name: docker-images-gpu-${{ github.sha }}
           path: |
             docker_images.json
-            # if you want to write additional metadata, add it here
